<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    tools:context="com.sgabhart.tipcalculatorv302.MainActivity">

    <TextView
        android:id="@+id/label_bill"
        style="@style/LabelStyle"
        android:layout_marginTop="20dp"
        android:minWidth="120dp"
        android:textSize="28sp"
        android:text="@string/label_bill"/>

    <EditText
        android:id="@+id/amount_bill"
        style="@style/InputStyle"
        android:layout_toEndOf="@id/label_bill"
        android:layout_alignBottom="@id/label_bill"
        android:layout_alignParentEnd="true"
        android:hint="@string/amount_bill_hint"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/label_tip_percent"
        style="@style/LabelStyle"
        android:layout_marginTop="20dp"
        android:layout_below="@id/label_bill"
        android:layout_alignStart="@id/label_bill"
        android:layout_alignEnd="@id/label_bill"
        android:text="@string/label_tip_percent"/>

    <EditText
        android:id="@+id/amount_tip_percent"
        style="@style/InputStyle"
        android:layout_toEndOf="@id/label_tip_percent"
        android:layout_alignBottom="@id/label_tip_percent"
        android:layout_alignEnd="@id/amount_bill"
        android:hint="@string/amount_tip_percent_hint"
        android:inputType="number"/>

    <!--red line-->
    <View
        android:id="@+id/red_line"
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:layout_below="@id/label_tip_percent"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@id/label_bill"
        android:layout_alignEnd="@id/amount_bill"
        android:background="#FF00"/>

    <TextView
        android:id="@+id/label_tip"
        style="@style/LabelStyle"
        android:layout_marginTop="20dp"
        android:layout_below="@id/red_line"
        android:layout_alignStart="@id/label_bill"
        android:layout_alignEnd="@id/label_bill"
        android:text="@string/label_tip"/>

    <TextView
        android:id="@+id/amount_tip"
        style="@style/OutputStyle"
        android:layout_toEndOf="@id/label_tip"
        android:layout_alignBottom="@id/label_tip"
        android:layout_alignEnd="@id/amount_bill" />

    <TextView
        android:id="@+id/label_total"
        style="@style/LabelStyle"
        android:layout_marginTop="20dp"
        android:layout_below="@id/label_tip"
        android:layout_alignStart="@id/label_bill"
        android:layout_alignEnd="@id/label_bill"
        android:text="@string/label_total"/>

    <TextView
        android:id="@+id/amount_total"
        style="@style/OutputStyle"
        android:layout_toEndOf="@id/label_total"
        android:layout_alignBottom="@id/label_total"
        android:layout_alignEnd="@id/amount_bill" />

    <Button
        android:id="@+id/button_calc"
        style="@style/ButtonStyle"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/amount_total"
        android:text="@string/button_calculate"
        android:onClick="calculate"/>

</RelativeLayout>
